--- a/app/styles/createPage.scss
+++ b/app/styles/createPage.scss
@@ -1,31 +1,38 @@
-body{
+body {
   font-family: helvetica,sans-serif;
   background: url('/images/bgBlurred.jpg') no-repeat;
   background-size: cover;
 }
-
-.job-create-title{
+.job-create-title {
   text-align: center;
   padding: 20px;
 }
-.job-add-form{
+.job-add-form {
   box-shadow: 0 0 5px gray;
   background: white;
 }
-.form-item{
-  padding:10px;
+.form-item {
+  padding: 10px;
 }
-.form-label-title{
+.form-label-title {
   font-size: 16px;
   font-weight: bold;
 }
-.form-label-desc{
-
-}
-.form-input{
+.form-label-desc {}
+.form-input {
   width: 100%;
   text-align: center;
 }
-.total-amount{
+.total-amount {
   font-weight: normal;
+}
+.ng-timepicker {
+  z-index: 3;
+}
+.ng-timepicker > table > tbody > tr > td > input {
+  padding: 0;
+}
+.ng-timepicker-input {
+  width: 100px;
+  text-align: center;
 }
