--- a/app/views/createPage.html
+++ b/app/views/createPage.html
@@ -4,16 +4,6 @@
 </div>
 
   <div class="job-add-form container">
-    <div class="form-item col-xs-12">
-      <div class="form-label-title">
-        Job Id :
-      </div>
-      <div class="form-label-desc">
-      </div>
-      <div class="job-id">
-        #12434
-      </div>
-    </div>
 
     <div class="form-item col-sm-6">
       <div class="form-label-title">
@@ -22,7 +12,7 @@
       <div class="form-label-desc">
         The location where porter needs to arrive.
       </div>
-      <input type="text" name="location" class="form-input" />
+      <input g-places-autocomplete ng-model="createPage.form.location" options="createPage.autocompleteOptions" force-selection="true" type="text" name="location" class="form-input" />
     </div>
 
     <div class="form-item col-sm-6">
@@ -32,7 +22,7 @@
       <div class="form-label-desc">
         The time at which porter should arrive.
       </div>
-      <input type="text" name="time" class="form-input"/>
+      <ng-timepicker ng-model="createPage.form.time" show-meridian="true" init-time="09:00" theme="red"></ng-timepicker>
     </div>
 
     <div class="form-item col-sm-6">
@@ -42,7 +32,7 @@
       <div class="form-label-desc">
         The total number of porters required
       </div>
-      <input type="text" name="noofporter" class="form-input" />
+      <input type="text" ng-model="createPage.form.noOfPorters" name="noofporter" class="form-input" />
     </div>
 
     <div class="form-item col-sm-6">
@@ -52,18 +42,18 @@
       <div class="form-label-desc">
         The amount that will be paid to each porter
       </div>
-      <input type="text" name="amount" class="form-input" />
+      <input type="text" name="amount" ng-model="createPage.form.perPersonAmount" money class="form-input" />
     </div>
 
     <div class="form-item col-xs-12">
       <div class="form-label-title">
-        Total Amount <span class="total-amount">Rs XYZ</span>
+        Total Amount <span class="total-amount">Rs {{ createPage.form.perPersonAmount * createPage.form.noOfPorters || 0}}</span>
       </div>
     </div>
 
 
     <div class="form-item">
-      <input class="btn btn-primary" type="button" value="create" />
+      <input class="btn btn-primary" type="button" value="create" ng-click="createPage.createJob()"/>
     </div>
 
   </div>
