--- a/app/styles/createPage.scss
+++ b/app/styles/createPage.scss
@@ -1,6 +1,6 @@
 body {
   font-family: helvetica,sans-serif;
-  background: url('/images/bgBlurred.jpg') no-repeat;
+  background: url('../images/bgBlurred.jpg') no-repeat;
   background-size: cover;
 }
 .job-create-title {
