--- a/app/styles/createPage.scss
+++ b/app/styles/createPage.scss
@@ -8,7 +8,8 @@ body {
   padding: 20px;
 }
 .job-add-form {
-  box-shadow: 0 0 5px gray;
+  border-radius: 5px;
+  box-shadow: 0px 3px 13px 0px rgba(115,115,115,1);
   background: white;
 }
 .form-item {
