--- a/app/styles/current-jobs.scss
+++ b/app/styles/current-jobs.scss
@@ -1,9 +1,42 @@
-.current-jobs{
-  &__container{
+.current-jobs {
+  &__container {
     margin-top: 10px;
-    padding-top: 7px;
+    padding-top: 0px;
     border-radius: 5px;
-    box-shadow: 0px 3px 13px 0px rgba(115,115,115,1);
+    box-shadow: 0 3px 13px 0 rgba(115,115,115,1);
     background-color: white;
+    overflow: hidden;
+  }
+  &__hr {
+    margin: 3px 0;
+    box-sizing: border-box;
+    height: 1px;
+    background-color: #455A64;
+    border: 0;
+    opacity: 0.5;
+  }
+  &__small-details {
+    padding-top: 7px;
+    font-size: 0.8em;
+    margin-bottom: 5px;
+    box-shadow: 0 1px 2px 0 #737373;
+    text-align: center;
+  }
+  &__row-title {
+    font-size: 0.9em;
+    font-weight: 600;
+    text-align: center;
+  }
+  &__row-main {
+    font-size: 1.5em;
+    text-align: center;
+    &__time-left {
+      font-size: 0.8em;
+    }
+  }
+}
+@media screen and (min-width: 768px) {
+  .current-jobs__container {
+    max-width: 800px;
   }
 }
