--- a/app/views/currentJobs.html
+++ b/app/views/currentJobs.html
@@ -2,7 +2,52 @@
   <div class="container current-jobs__header">
     Current Jobs :
   </div>
-  <div class="container current-jobs__container" ng-repeat="job in jobs.current" ng-style="jobs.styleFromJob(job)">
-    {{job}}
+  <div class="container current-jobs__container" ng-repeat="job in jobs.current" >
+    <div class="row current-jobs__small-details" ng-style="jobs.styleFromJob(job)">
+      <div class="col-md-4">
+        Id : {{job.jobId}}
+      </div>
+      <div class="col-md-4">
+        {{job.prettyTime}}
+      </div>
+      <div class="col-md-4">
+        {{job.location.description}}
+      </div>
+    </div>
+    <!-- <hr class="current-jobs__hr" /> -->
+    <div class="row current-jobs__row-title">
+      <div class="col-md-4">
+        Time left
+      </div>
+      <div class="col-md-2">
+        Porters required
+      </div>
+      <div class="col-md-2">
+        Accepted
+      </div>
+      <div class="col-md-2">
+        On route
+      </div>
+      <div class="col-md-2">
+        Arrived
+      </div>
+    </div>
+    <div class="row current-jobs__row-main">
+      <div class="col-md-4 current-jobs__row-main__time-left">
+        {{job.timeTillStart}}
+      </div>
+      <div class="col-md-2">
+        <i class="fa fa-users"></i>&nbsp;{{job.portersRequired}}
+      </div>
+      <div class="col-md-2">
+        <i class="fa fa-check"></i>&nbsp;{{job.portersAccepted}}
+      </div>
+      <div class="col-md-2">
+        <i class="fa fa-car"></i>&nbsp;{{job.portersArriving}}
+      </div>
+      <div class="col-md-2">
+        <i class="fa fa-thumb-tack"></i>&nbsp;{{job.portersReached}}
+      </div>
+    </div>
   </div>
 </div>
