--- a/app/styles/createPage.scss
+++ b/app/styles/createPage.scss
@@ -36,3 +36,18 @@ body {
   width: 100px;
   text-align: center;
 }
+
+.map-view{
+  padding: 20px 0 20px 0;
+}
+
+#map_canvas {
+  margin: 0;
+  color: #008000;
+}
+
+#map_canvas {
+  min-height: 300px !important;
+  min-width: 100% !important;
+  position: relative !important;
+}
