--- a/app/views/currentJobs.html
+++ b/app/views/currentJobs.html
@@ -2,15 +2,18 @@
   <div class="container current-jobs__header">
     Current Jobs :
   </div>
-  <div class="container current-jobs__container" ng-repeat="job in jobs.current" >
+  <div class="container current-jobs__container" ng-repeat="job in jobs.pending">
     <div class="row current-jobs__small-details" ng-style="jobs.styleFromJob(job)">
-      <div class="col-md-4">
+      <div class="col-md-3">
         Id : {{job.jobId}}
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         {{job.prettyTime}}
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
+        Payment(Per porter) : {{job.paymentPerPorter || 'n/a'}}
+      </div>
+      <div class="col-md-3">
         {{job.location.description}}
       </div>
     </div>
@@ -47,6 +50,46 @@
       </div>
       <div class="col-md-2">
         <i class="fa fa-thumb-tack"></i>&nbsp;{{job.portersReached}}
+      </div>
+    </div>
+  </div>
+
+  <div class="container current-jobs__container" ng-repeat="job in jobs.fulfilled">
+    <div class="row current-jobs__small-details" ng-style="jobs.styleFromJob(job)">
+      <div class="col-md-3">
+        Id : {{job.jobId}}
+      </div>
+      <div class="col-md-3">
+        {{job.prettyTime}}
+      </div>
+      <div class="col-md-3">
+        Payment(Per porter) : {{job.paymentPerPorter || 'n/a'}}
+      </div>
+      <div class="col-md-3">
+        {{job.location.description}}
+      </div>
+    </div>
+    <!-- <hr class="current-jobs__hr" /> -->
+    <div class="row current-jobs__row-title">
+      <div class="col-md-4">
+        Time of completion
+      </div>
+      <div class="col-md-4">
+        Location
+      </div>
+      <div class="col-md-4">
+        Total Payment
+      </div>
+    </div>
+    <div class="row current-jobs__row-main">
+      <div class="col-md-4 current-jobs__row-main__time-left">
+        {{job.prettyTime}}
+      </div>
+      <div class="col-md-4">
+        {{job.location.description}}
+      </div>
+      <div class="col-md-4">
+        {{(job.porters.length * job.paymentPerPorter) || 'n/a'}}
       </div>
     </div>
   </div>
