--- a/app/styles/current-jobs.scss
+++ b/app/styles/current-jobs.scss
@@ -15,6 +15,10 @@
     background-color: white;
     overflow: hidden;
   }
+
+  &__porters {
+    text-align: center;
+  }
   &__hr {
     margin: 3px 0;
     box-sizing: border-box;
@@ -41,6 +45,10 @@
     &__time-left {
       font-size: 0.8em;
     }
+  }
+  &__row-plus{
+    font-size: 1.5em;
+    padding-top: 5px;
   }
 }
 @media screen and (min-width: 768px) {
