--- a/app/views/currentJobs.html
+++ b/app/views/currentJobs.html
@@ -20,7 +20,7 @@
     </div>
     <!-- <hr class="current-jobs__hr" /> -->
     <div class="row current-jobs__row-title">
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="row">
           Time left
         </div>
@@ -48,6 +48,29 @@
         <div class="row current-jobs__row-main"> <i class="fa fa-thumb-tack"></i>&nbsp;{{job.portersReached}}</div>
 
       </div>
+
+      <div class="col-md-1">
+        <div class="row current-jobs__row-plus">
+          <i class="fa fa-plus" ng-hide="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+          <i class="fa fa-times" ng-show="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+        </div>
+      </div>
+    </div>
+
+    <div class="row current-jobs__porters" ng-show="job.expanded">
+      <hr class="current-jobs__hr" />
+      <h4>Porter Details</h4>
+      <div class="row" ng-repeat="porter in job.porters">
+        <div class="col-sm-2">
+          Porter Id: {{porter.porterId}}
+        </div>
+        <div class="col-sm-5">
+          Name: {{jobs.getPorter(porter.porterId).name}}
+        </div>
+        <div class="col-sm-5">
+          Time of Acceptance: {{jobs.prettifyTime(porter.startTime)}}
+        </div>
+      </div>
     </div>
 
   </div>
@@ -64,7 +87,6 @@
         Payment(Per porter) : {{job.paymentPerPorter || 'n/a'}}
       </div>
     </div>
-    <!-- <hr class="current-jobs__hr" /> -->
     <div class="row current-jobs__row-title">
       <div class="col-md-4">
         <div class="row">
@@ -74,7 +96,7 @@
           {{job.prettyTime}}
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="row">
           Location
         </div>
@@ -82,12 +104,33 @@
           {{job.location.description}}
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="row">
           Total Payment
         </div>
         <div class="row current-jobs__row-main">
           {{(job.porters.length * job.paymentPerPorter) || 'n/a'}}
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="row current-jobs__row-plus">
+          <i class="fa fa-plus" ng-hide="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+          <i class="fa fa-times" ng-show="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+        </div>
+      </div>
+    </div>
+    <div class="row current-jobs__porters" ng-show="job.expanded">
+      <hr class="current-jobs__hr" />
+      <h4>Porter Details</h4>
+      <div class="row" ng-repeat="porter in job.porters">
+        <div class="col-sm-2">
+          Porter Id: {{porter.porterId}}
+        </div>
+        <div class="col-sm-5">
+          Name: {{jobs.getPorter(porter.porterId).name}}
+        </div>
+        <div class="col-sm-5">
+          Time of Arrival: {{jobs.prettifyTime(porter.endTime)}}
         </div>
       </div>
     </div>
