--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,6 +13,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
+  min-height:100vh; 
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
