--- a/app/views/createPage.html
+++ b/app/views/createPage.html
@@ -11,7 +11,7 @@
       <div class="form-label-desc">
         The location where porter needs to arrive.
       </div>
-      <input g-places-autocomplete ng-model="createPage.form.location" options="createPage.autocompleteOptions" force-selection="true" type="text" name="location" class="form-input" />
+      <input g-places-autocomplete ng-change="createPage.updateMapParams()" ng-model="createPage.form.location" options="createPage.autocompleteOptions" force-selection="true" type="text" name="location" class="form-input" />
     </div>
     <div class="form-item col-sm-7 col-xs-12">
       <div class="form-label-title">
@@ -63,6 +63,6 @@
     </div>
   </div>
   <div class="container map-view">
-    <clustered-map markers="createPage.map.markers" center="createPage.map.center" ></clustered-map>
+    <clustered-map markers="createPage.map.markers" center="createPage.map.center" ng-if="createPage.map.available" zoom="14"></clustered-map>
   </div>
 </div>
