--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,7 +13,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
-  min-height:100vh; 
+  min-height:100vh;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
@@ -90,6 +90,12 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @import "./createPage.scss";
