--- a/app/styles/createPage.scss
+++ b/app/styles/createPage.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: helvetica,sans-serif;
+  // font-family: helvetica,sans-serif;
   background: url('../images/bgBlurred.jpg') no-repeat;
   background-size: cover;
 }
