--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,6 +14,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding: 0;
   min-height:100vh;
+  font-family: 'Roboto';
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
