--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,8 +13,13 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 
 body {
   padding: 0;
-  min-height:100vh;
   font-family: 'Roboto';
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    // min-height:100vh;
+  }
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
