--- a/app/views/createPage.html
+++ b/app/views/createPage.html
@@ -1,8 +1,7 @@
 <div class="container-fluid">
-  <div class="job-create-title row">
-    Create Job Form
-  </div>
-
+<div>
+  &nbsp;
+</div>
   <div class="job-add-form container">
     <div class="form-item col-sm-12">
       <div class="form-label-title">
