--- a/app/views/createPage.html
+++ b/app/views/createPage.html
@@ -1,3 +1,23 @@
+<div class="header-main">
+  <a href="#/" class="col-xs-4">
+    <div class="header-tile">
+      POST JOBS
+    </div>
+    <div class="active-tab"></div>
+  </a>
+  <a href="#/current-jobs" class="col-xs-4">
+    <div class="header-tile">
+      TRACK JOBS
+    </div>
+      <div ng-class="active-tab"></div>
+  </a>
+  <a href="#/analytics" class="col-xs-4">
+    <div class="header-tile">
+      ANALYTICS
+    </div>
+      <div class="active-tab"></div>
+  </a>
+</div>
 <div class="container-fluid">
 <div>
   &nbsp;
