--- a/app/views/analytics.html
+++ b/app/views/analytics.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
   <div class="container current-jobs__container">
+    <h4>Jobs Requested</h4>
     <div id="chart"></div>
 
   </div>
