added analytics tab

--- a/app/views/analytics.html
+++ b/app/views/analytics.html
@@ -1,3 +1,21 @@
+<div class="header-main">
+  <a href="#/" class="col-xs-4">
+    <div class="header-tile">
+      POST JOBS
+    </div>
+  </a>
+  <a href="#/current-jobs" class="col-xs-4">
+    <div class="header-tile">
+      TRACK JOBS
+    </div>
+  </a>
+  <a href="#/analytics" class="col-xs-4">
+    <div class="header-tile">
+      ANALYTICS
+    </div>
+    <div class="active-tab"></div>
+  </a>
+</div>
 <div class="container-fluid">
   <div class="container current-jobs__container">
     <h4>Jobs Requested</h4>
