Fixed scroll issues

--- a/app/views/currentJobs.html
+++ b/app/views/currentJobs.html
@@ -16,7 +16,7 @@
     </div>
   </a>
 </div>
-<div class="container-fluid">
+<div class="container-fluid job-container">
 
   <div class="container current-jobs__container" ng-repeat="job in jobs.pending">
     <div class="row current-jobs__small-details" ng-style="jobs.styleFromJob(job)">
