--- a/app/styles/current-jobs.scss
+++ b/app/styles/current-jobs.scss
@@ -1,5 +1,4 @@
 .current-jobs {
-
   &__header {
     background-color: #37474F;
     color: white;
@@ -9,13 +8,12 @@
   }
   &__container {
     margin-top: 10px;
-    padding-top: 0px;
+    padding-top: 0;
     border-radius: 5px;
     box-shadow: 0 3px 13px 0 rgba(115,115,115,1);
     background-color: white;
     overflow: hidden;
   }
-
   &__porters {
     text-align: center;
   }
@@ -46,7 +44,7 @@
       font-size: 1.1em;
     }
   }
-  &__row-plus{
+  &__row-plus {
     font-size: 1.5em;
     padding-top: 5px;
   }
@@ -55,4 +53,8 @@
   .current-jobs__container {
     max-width: 800px;
   }
+}
+.job-container {
+  max-height: 100vh;
+  overflow: scroll;
 }
