--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,10 +11,11 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding: 0;
   font-family: 'Roboto';
+    min-height:100vh;
 }
 @media screen and (max-width: 600px) {
   body {
-    // min-height:100vh;
+
   }
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
