--- a/app/views/analytics.html
+++ b/app/views/analytics.html
@@ -2,7 +2,9 @@
   <div class="container current-jobs__container">
     <h4>Jobs Requested</h4>
     <div id="chart"></div>
-
+    <h4>Porters late per job</h4>
+    <div id="chart2"></div>
+    <h4>Average % of porters late for jobs : {{percentageWorkersLate}}%</h4>
   </div>
 
 </div>
