--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -11,12 +11,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body {
   padding: 0;
   font-family: 'Roboto';
-    min-height:100vh;
+  min-height: 100vh;
 }
 @media screen and (max-width: 600px) {
-  body {
-
-  }
+  body {}
 }
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
@@ -90,7 +88,9 @@ body {
 }
 .header-tile {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 .header-main {
   color: white;
@@ -98,10 +98,10 @@ body {
   text-decoration: none;
 }
 .header-main > a {
-  background: rgba(33,151,245,1);
+  background: black;
   color: white;
   text-decoration: none;
-  border-right: 1px solid black;
+  border-right: 1px solid rgba(93, 92, 92, 0.7);
   padding: 0;
 }
 .header-main > a:hover {
@@ -113,6 +113,14 @@ body {
   height: 3px;
   background: rgba(237, 107, 33, 1);
   width: 100%;
+}
+.header-icon {
+  width: 50px;
+  height: 50px;
+  z-index: 30;
+  position: absolute;
+  left: 20px;
+  top: 5px;
 }
 @import "./createPage.scss";
 @import "./current-jobs.scss";
