--- a/app/views/analytics.html
+++ b/app/views/analytics.html
@@ -22,7 +22,8 @@
     <div id="chart"></div>
     <h4>Porters late per job</h4>
     <div id="chart2"></div>
+    <h4>Cluster map of job locations :</h4>
+    <clustered-map markers="map.markers" center="map.center" zoom="9"></clustered-map>
     <h4>Average % of porters late for jobs : {{percentageWorkersLate}}%</h4>
   </div>
-
 </div>
