--- a/app/views/currentJobs.html
+++ b/app/views/currentJobs.html
@@ -44,21 +44,21 @@
         </div>
       </div>
 
-      <div class="col-md-2 col-sm-6">
+      <div class="col-md-2 col-xs-6">
         <div class="row">Porters required</div>
         <div class="row current-jobs__row-main"><i class="fa fa-users"></i>&nbsp;{{job.portersRequired}}</div>
       </div>
-      <div class="col-md-2 col-sm-6">
+      <div class="col-md-2 col-xs-6">
         <div class="row">Accepted</div>
         <div class="row current-jobs__row-main"> <i class="fa fa-check"></i>&nbsp;{{job.portersAccepted}}</div>
 
       </div>
-      <div class="col-md-2 col-sm-6">
+      <div class="col-md-2 col-xs-6">
         <div class="row">On route</div>
         <div class="row current-jobs__row-main"> <i class="fa fa-car"></i>&nbsp;{{job.portersArriving}}</div>
 
       </div>
-      <div class="col-md-2 col-sm-6">
+      <div class="col-md-2 col-xs-6">
         <div class="row">Arrived</div>
         <div class="row current-jobs__row-main"> <i class="fa fa-thumb-tack"></i>&nbsp;{{job.portersReached}}</div>
 
@@ -66,26 +66,26 @@
 
       <div class="col-md-1">
         <div class="row current-jobs__row-plus">
-          <i class="fa fa-plus" ng-hide="job.expanded" ng-click="job.expanded = !job.expanded"></i>
-          <i class="fa fa-times" ng-show="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+          <i class="fa fa-plus" ng-show="job.expanded" ng-click="job.expanded = !job.expanded"></i>
+          <i class="fa fa-times" ng-hide="job.expanded" ng-click="job.expanded = !job.expanded"></i>
         </div>
       </div>
     </div>
 
-    <div class="row current-jobs__porters" ng-show="job.expanded">
+    <div class="row current-jobs__porters" ng-hide="job.expanded">
       <hr class="current-jobs__hr" />
       <h4>Porter Details</h4>
       <div class="row" ng-repeat="porter in job.porters">
-        <div class="col-sm-2">
+        <div class="col-xs-2">
           Porter Id: {{porter.porterId}}
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-3">
           Name: {{jobs.getPorter(porter.porterId).name}}
         </div>
-        <div class="col-sm-3">
+        <div class="col-xs-3">
           Contact: +123456789
         </div>
-        <div class="col-sm-4">
+        <div class="col-xs-4">
           ETA: {{porter.eta || ''}}
         </div>
       </div>
