--- a/app/styles/current-jobs.scss
+++ b/app/styles/current-jobs.scss
@@ -17,6 +17,9 @@
   &__porters {
     text-align: center;
   }
+  &__porter-row{
+    margin-bottom: 5px;
+  }
   &__hr {
     margin: 3px 0;
     box-sizing: border-box;
